# rules_rust

./: .bazelignore  WORKSPACE  WORKSPACE.bazel
crate_universe/src/context/: crate_context.rs
docs/: crate_universe.md  rust_analyzer.md
examples/: BUILD  examples_deps.bzl  rust-project.json
examples/crate_universe/cargo_aliases/: cargo-bazel-lock.json
examples/crate_universe/cargo_local/: Cargo.toml
examples/crate_universe/cargo_workspace/: cargo-bazel-lock.json
examples/crate_universe/multi_package/: cargo-bazel-lock.json
examples/crate_universe/no_cargo_manifests/: cargo-bazel-lock.json
examples/prostgen/: BUILD  Cargo.toml
examples/prostgen/basic/: BUILD  lib.rs  main.rs
examples/prostgen/helloworld/: BUILD  helloworld.proto
examples/prostgen/helloworld/greeter_client/: BUILD  greeter_client.rs
examples/prostgen/helloworld/greeter_server/: BUILD  greeter_server.rs
examples/prostgen/raze/: BUILD.bazel  crates.bzl
examples/prostgen/raze/remote/: BUILD.anyhow-1.0.38.bazel  BUILD.async-stream-0.3.0.bazel  BUILD.async-stream-impl-0.3.0.bazel  BUILD.async-trait-0.1.42.bazel  BUILD.autocfg-1.0.1.bazel  BUILD.base64-0.13.0.bazel  BUILD.bitflags-1.2.1.bazel  BUILD.bumpalo-3.6.1.bazel  BUILD.bytes-1.0.1.bazel  BUILD.cc-1.0.67.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.core-foundation-0.9.1.bazel  BUILD.core-foundation-sys-0.8.2.bazel  BUILD.either-1.6.1.bazel  BUILD.encoding_rs-0.8.28.bazel  BUILD.fnv-1.0.7.bazel  BUILD.foreign-types-0.3.2.bazel  BUILD.foreign-types-shared-0.1.1.bazel  BUILD.form_urlencoded-1.0.1.bazel  BUILD.futures-channel-0.3.13.bazel  BUILD.futures-core-0.3.13.bazel  BUILD.futures-sink-0.3.13.bazel  BUILD.futures-task-0.3.13.bazel  BUILD.futures-util-0.3.13.bazel  BUILD.getrandom-0.2.2.bazel  BUILD.h2-0.3.0.bazel  BUILD.hashbrown-0.9.1.bazel  BUILD.hermit-abi-0.1.18.bazel  BUILD.http-0.2.3.bazel  BUILD.http-body-0.4.0.bazel  BUILD.httparse-1.3.5.bazel  BUILD.httpdate-0.3.2.bazel  BUILD.hyper-0.14.4.bazel  BUILD.hyper-tls-0.5.0.bazel  BUILD.idna-0.2.2.bazel  BUILD.indexmap-1.6.1.bazel  BUILD.ipnet-2.3.0.bazel  BUILD.itertools-0.9.0.bazel  BUILD.itoa-0.4.7.bazel  BUILD.js-sys-0.3.47.bazel  (+77 more)
proto/prostgen/: BUILD  BUILD.bazel  lib.rs  prostgen.bzl  repositories.bzl  rules.bzl  test_port.rs  toolchain.bzl
proto/prostgen/raze/: BUILD  Cargo.toml  crates.bzl
proto/prostgen/raze/builds/: BUILD
proto/prostgen/raze/cargo/: BUILD.bazel
proto/prostgen/raze/patches/: BUILD  prost-build-0.6.1.md  prost-build-0.6.1.patch  prost-build-0.7.0.patch
proto/prostgen/raze/remote/: BUILD.anyhow-1.0.31.bazel  BUILD.anyhow-1.0.38.bazel  BUILD.async-stream-0.2.1.bazel  BUILD.async-stream-0.3.1.bazel  BUILD.async-stream-impl-0.2.1.bazel  BUILD.async-stream-impl-0.3.1.bazel  BUILD.async-trait-0.1.42.bazel  BUILD.async-trait-0.1.50.bazel  BUILD.autocfg-1.0.1.bazel  BUILD.base64-0.12.3.bazel  BUILD.base64-0.13.0.bazel  BUILD.bitflags-1.2.1.bazel  BUILD.bumpalo-3.6.1.bazel  BUILD.bytes-0.5.6.bazel  BUILD.bytes-1.0.1.bazel  BUILD.cc-1.0.67.bazel  BUILD.cfg-if-0.1.10.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.clap-2.33.3.bazel  BUILD.core-foundation-0.7.0.bazel  BUILD.core-foundation-0.9.1.bazel  BUILD.core-foundation-sys-0.7.0.bazel  BUILD.core-foundation-sys-0.8.2.bazel  BUILD.either-1.6.1.bazel  BUILD.fixedbitset-0.2.0.bazel  BUILD.fnv-1.0.7.bazel  BUILD.fuchsia-zircon-0.3.3.bazel  BUILD.fuchsia-zircon-sys-0.3.3.bazel  BUILD.futures-channel-0.3.12.bazel  BUILD.futures-channel-0.3.14.bazel  BUILD.futures-core-0.3.12.bazel  BUILD.futures-core-0.3.14.bazel  BUILD.futures-sink-0.3.12.bazel  BUILD.futures-sink-0.3.14.bazel  BUILD.futures-task-0.3.12.bazel  BUILD.futures-task-0.3.14.bazel  BUILD.futures-util-0.3.12.bazel  BUILD.futures-util-0.3.14.bazel  BUILD.getrandom-0.1.16.bazel  BUILD.getrandom-0.2.2.bazel  (+307 more)
proto/raze/: crates.bzl
rust/: rust.bzl
test/: deps.bzl
test/prostgen/: BUILD  Cargo.toml  depends_on_use_external.proto  echo_impl.rs  echo_service_test.rs  shared_imports.proto  x.proto  y.proto
test/prostgen/raze/: BUILD.bazel  crates.bzl
test/prostgen/raze/remote/: BUILD.anyhow-1.0.38.bazel  BUILD.async-stream-0.3.0.bazel  BUILD.async-stream-impl-0.3.0.bazel  BUILD.async-trait-0.1.42.bazel  BUILD.autocfg-1.0.1.bazel  BUILD.base64-0.13.0.bazel  BUILD.bytes-1.0.1.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.either-1.6.1.bazel  BUILD.fnv-1.0.7.bazel  BUILD.futures-channel-0.3.13.bazel  BUILD.futures-core-0.3.13.bazel  BUILD.futures-sink-0.3.13.bazel  BUILD.futures-task-0.3.13.bazel  BUILD.futures-util-0.3.13.bazel  BUILD.getrandom-0.2.2.bazel  BUILD.h2-0.3.0.bazel  BUILD.hashbrown-0.9.1.bazel  BUILD.http-0.2.3.bazel  BUILD.http-body-0.4.0.bazel  BUILD.httparse-1.3.5.bazel  BUILD.httpdate-0.3.2.bazel  BUILD.hyper-0.14.4.bazel  BUILD.indexmap-1.6.1.bazel  BUILD.itertools-0.9.0.bazel  BUILD.itoa-0.4.7.bazel  BUILD.lazy_static-1.4.0.bazel  BUILD.libc-0.2.86.bazel  BUILD.log-0.4.14.bazel  BUILD.memchr-2.3.4.bazel  BUILD.mio-0.7.9.bazel  BUILD.miow-0.3.6.bazel  BUILD.ntapi-0.3.6.bazel  BUILD.percent-encoding-2.1.0.bazel  BUILD.pin-project-1.0.5.bazel  BUILD.pin-project-internal-1.0.5.bazel  BUILD.pin-project-lite-0.2.4.bazel  BUILD.pin-utils-0.1.0.bazel  BUILD.ppv-lite86-0.2.10.bazel  BUILD.proc-macro2-1.0.24.bazel  (+29 more)
(+16 files in other folders)
